[project]
name = "langgraph-main"
version = "0.1.0"
description = ""
authors = [
    {name = "hi-coco11",email = "giho04300@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "langgraph_main", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
